--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>hello stuckdo ......</h1>
-<!-- <%= render 'text'%> -->
+<div class="jumbotron">
+	<h1>Saikat</h1>
+	<p>This is my Smart to do list ruby on rails Application</p>
+	<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
+</div>
