--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-	<h1>Saikat</h1>
+	<h1><i class="fa fa-circle-o-notch"></i>Saikat</h1>
 	<p>This is my Smart to do list ruby on rails Application</p>
 	<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %>
 </div>
