--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -17,6 +17,7 @@
  	<%= link_to edit_task_path(task) do%> 
  	Create<%= time_ago_in_words(task.created_at)%>ago
  	<% end %>
+ 	<%= link_to "X", task_path(task), method: :delete, data: {confirm: "Are U Sure??"}, class: "pull-right"%>
  	</div>
  	<div class="panel-body"><%= task.content%></div>
  	<div class="panel-footer text-center">
