Added link detection

--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -19,7 +19,7 @@
  	<% end %>
  	<%= link_to "X", task_path(task), method: :delete, data: {confirm: "Are U Sure??"}, class: "pull-right"%>
  	</div>
- 	<div class="panel-body"><%= task.content%></div>
+ 	<div class="panel-body"><%= raw(task.content_html) %></div>
  	<div class="panel-footer text-center">
  		<% if task.state=="doing" %>
  		<div class="btn-group btn-group-justified">
