--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,8 +11,8 @@
     <% end %>
 
     <%= f.input :password, autocomplete: "off", required: false,label: false, placeholder: "Password",input_html: {class: "form-control"} %>
-    <%= f.input :password_confirmation, required: false,label: false, placeholder: "password_confirmation",input_html: {class: "form-control"} %>
-    <%= f.input :current_password, required: true,label: false, placeholder: "current_password",input_html: {class: "form-control"} %>
+    <%= f.input :password_confirmation, required: false,label: false, placeholder: "password confirmation",input_html: {class: "form-control"} %>
+    <%= f.input :current_password, required: true,label: false, placeholder: "current password",input_html: {class: "form-control"} %>
  
   
     <%= f.button :submit, "Update",class:"btn btn-primary btn-block" %>
