--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
   
     <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "Email", input_html: {class: "form-control"} %>
     <%= f.input :password, required: true,  label: false, placeholder: "Password",input_html: {class: "form-control"} %>
-    <%= f.input :password_confirmation, required: true,  label: false, placeholder: "password_confirmation",input_html: {class: "form-control"} %>
+    <%= f.input :password_confirmation, required: true,  label: false, placeholder: "password confirmation",input_html: {class: "form-control"} %>
 
 
  
